feat: JSON schema validation (#31)
* feat: JSON schema validation

* feat: more tests, more Java 17, more JsonValue API integration

* feat: add path to JsonPathException

* feat: semeantic single quotes lenient mode

* feat: GetListener for JsonNode lookups

* preparing release

* preparing release

* preparing release

* remove schema validation